src/test/ui/issues/issue-51632-try-desugar-incompatible-types.rs
#![allow(dead_code)]

fn missing_discourses() -> Result<isize, ()> {
    Ok(1)
}

fn forbidden_narratives() -> Result<isize, ()> {
    missing_discourses()?
    //~^ ERROR try expression alternatives have incompatible types
}

fn main() {}
